note.txt
-----Placed "type": "module" at the wrong place will throw error-----
{
  "name": "strive-homework-m6-w1-p2",
  "version": "1.0.0",
  "description": "",
  "main": "index.js",
  
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1",
    "type": "module",
    "dev": "nodemon -r dotenv/config ./src/server.js"
  }

------The correct way:------
  {
  "name": "strive-homework-m6-w1-p2",
  "version": "1.0.0",
  "description": "",
  "main": "index.js",
  "type": "module",
  
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1",
    "dev": "nodemon -r dotenv/config ./src/server.js"
  }
  
}

--------------------------------------------------------------------------------------------------------------
the error message:

$ npm run dev

> strive-homework-m6-w1-p2@1.0.0 dev
> nodemon -r dotenv/config ./src/server.js

[nodemon] 2.0.16
[nodemon] to restart at any time, enter `rs`
[nodemon] watching path(s): *.*
[nodemon] watching extensions: js,mjs,json
[nodemon] starting `node -r dotenv/config ./src/server.js`
(node:12516) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\src\server.js:1
import express from 'express';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:17:47
[nodemon] app crashed - waiting for file changes before starting...


----------------------------------------------------------------------------------------------------------------

Cast Error

why is this happening?
because i put the wrong ID on postman, adding 1 more character, it becomes 13 characters.
on postman shown generic error 500 instead of error 404.
it supposed to show error 404 because the fault is on the user who put wrong ID.

solved by adding this to errorHandler:
err instanceof mongoose.CastError

it will look like this:
export const notFoundHandler = (err, req, res, next) => {
  if (err.status === 404 || err instanceof mongoose.CastError) {
    // If the error received has status of 404, I am responsible of sending a response, otherwise I'm sending the error to who comes next
    res.status(404).send({ message: err.message, status: "error" })
  } else {
    next(err)
  }
} // 404s

CastError: Cast to ObjectId failed for value "627561751280d3291b7f43bdZ" (type string) at path "_id" for model "Post"
    at model.Query.exec (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:4716:21)
    at model.Query.Query.then (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:4815:15)
    at processTicksAndRejections (node:internal/process/task_queues:96:5) {
  messageFormat: undefined,
  stringValue: '"627561751280d3291b7f43bdZ"',
  kind: 'ObjectId',
  value: '627561751280d3291b7f43bdZ',
  path: '_id',
  reason: BSONTypeError: Argument passed in must be a string of 12 bytes or a string of 24 hex characters or an integer
      at new BSONTypeError (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\bson\lib\error.js:41:28)
      at new ObjectId (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\bson\lib\objectid.js:66:23) 
      at castObjectId (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\cast\objectid.js:24:12)
      at ObjectId.cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schema\objectid.js:245:12)
      at ObjectId.SchemaType.applySetters (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1189:12)
      at ObjectId.SchemaType._castForQuery (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1623:15)
      at ObjectId.SchemaType.castForQuery (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1613:15)
      at ObjectId.SchemaType.castForQueryWrapper (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1590:20)
      at cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\cast.js:344:32)        
      at model.Query.Query.cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:5138:12),
  valueType: 'string'
}
Incoming request --> GET -- Mon May 09 2022 21:06:30 GMT+0200 (Central European Summer Time)
CastError: Cast to ObjectId failed for value "627561751280d3291b7f43bi" (type string) at path "_id" for model "Post"
    at model.Query.exec (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:4716:21)
    at model.Query.Query.then (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:4815:15)
    at processTicksAndRejections (node:internal/process/task_queues:96:5) {
  messageFormat: undefined,
  stringValue: '"627561751280d3291b7f43bi"',
  kind: 'ObjectId',
  value: '627561751280d3291b7f43bi',
  path: '_id',
  reason: BSONTypeError: Argument passed in must be a string of 12 bytes or a string of 24 hex characters or an integer
      at new BSONTypeError (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\bson\lib\error.js:41:28)
      at new ObjectId (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\bson\lib\objectid.js:66:23) 
      at castObjectId (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\cast\objectid.js:24:12)
      at ObjectId.cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schema\objectid.js:245:12)
      at ObjectId.SchemaType.applySetters (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1189:12)
      at ObjectId.SchemaType._castForQuery (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1623:15)
      at ObjectId.SchemaType.castForQuery (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1613:15)
      at ObjectId.SchemaType.castForQueryWrapper (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\schematype.js:1590:20)
      at cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\cast.js:344:32)        
      at model.Query.Query.cast (C:\Users\erliz\OneDrive\Desktop\Homework\Back-end\strive-homework-m6-w1-p2\node_modules\mongoose\lib\query.js:5138:12),
  valueType: 'string'
}